manifests/lighthouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lighthouse-ci 
  name:  lighthouse-ci
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: lighthouse-ci 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lighthouse-ci
    spec:
      containers:
        - image: cdssnc/lighthouse_ci
          imagePullPolicy: Always
          name: lighthouse-ci 
          resources: {}
          livenessProbe:
            httpGet:
              path: /monitoring/alive
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /monitoring/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
