manifests/lighthouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: lighthouse-ci
  name: lighthouse-ci
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: lighthouse-ci
