manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lighthouse-ci-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: lighthouse-ci
          servicePort: 8080
